# roblox-forge

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
src/: App.tsx  main.tsx  r3f-types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/ai/: client.rs  commands.rs  mod.rs  prompt.rs
src-tauri/src/builder/: mod.rs  rbx_builder.rs  rojo.rs  rojo_serve.rs
src-tauri/src/commands/: ai.rs  auth.rs  build.rs  dashboard.rs  mod.rs  project.rs  publish.rs  rojo.rs  validate.rs
src-tauri/src/project/: manager.rs
src-tauri/src/roblox/: mod.rs  oauth.rs  open_cloud.rs
src-tauri/src/validation/: checks.rs  fixes.rs  luau_lint.rs  mod.rs  selene.rs
src/components/: DevModeBanner.tsx  ErrorBoundary.tsx  Layout.tsx  Skeleton.tsx  ToastContainer.tsx
src/lib/: behaviorScriptGen.ts  canvasSerializer.ts  exportZip.ts  gameLogic.ts  isTauriRuntime.ts  luauCodeGen.ts  luauHighlight.ts  monetization.ts  nodeTypes.ts  projectToCanvas.ts  rojoProjectGen.ts  storage.ts  templatePresets.ts  templateScripts.ts  useKeyboardShortcuts.ts
src/services/: browserDevMocks.ts  tauriCommands.ts
src/stores/: authStore.ts  canvasStore.ts  chatStore.ts  instanceStore.ts  projectStore.ts  toastStore.ts  userStore.ts  visualScriptStore.ts
src/types/: ai.ts  project.ts  roblox.ts  user.ts  validation.ts
templates/battlegrounds/: default.project.json
templates/horror/: default.project.json
templates/minigames/: default.project.json
templates/obby/: default.project.json
(+99 files in other folders)
